Fix comments alignment

--- a/client/src/stylesheets/Comment.css
+++ b/client/src/stylesheets/Comment.css
@@ -1,6 +1,6 @@
 .comment-cards {
   background-color: #fff;
-  margin: 20px 20px 20px 0px;
+  margin: 20px 20px 20px 20px;
   padding: 20px;
   border: solid 2px black;
   border-radius: 10px;
